@@ -6,9 +6,9 @@ import archivegarden.shop.dto.user.cart.CartResultResponse;
 import archivegarden.shop.entity.Cart;
 import archivegarden.shop.entity.Member;
 import archivegarden.shop.entity.Product;
-import archivegarden.shop.exception.ajax.AjaxEntityNotFoundException;
+import archivegarden.shop.exception.ajax.EntityNotFoundAjaxException;
 import archivegarden.shop.exception.ajax.NotEnoughStockAjaxException;
-import archivegarden.shop.exception.common.EntityNotFoundException;
+import archivegarden.shop.exception.global.EntityNotFoundException;
 import archivegarden.shop.repository.cart.CartRepository;
 import archivegarden.shop.repository.member.MemberRepository;
 import archivegarden.shop.repository.product.ProductRepository;
@@ -19,7 +19,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
 
 @Service
 @Transactional
@@ -30,31 +31,52 @@ public class CartService {
     private final MemberRepository memberRepository;
     private final ProductRepository productRepository;
     private final CartRepository cartRepository;
+    private final Executor executor;
 
     /**
      * 장바구니 조회
+     *
+     * @param memberId 조회할 회원 ID
+     * @return 장바구니 상품 목록 DTO
      */
     @Transactional(readOnly = true)
     public List<CartListDto> getCarts(Long memberId) {
-        return cartRepository.findAllProducts(memberId)
-                .stream()
-                .map(c -> {
-                    String encodedImageData = productImageService.getEncodedImageData(c.getDisplayImageData());
-                    c.setDisplayImageData(encodedImageData);
-                    return c;
-                }).collect(Collectors.toList());
+        List<CartListDto> cartListDtos = cartRepository.findCartItems(memberId);
+
+        List<CompletableFuture<Void>> futures = cartListDtos.stream()
+                .map(item -> CompletableFuture.runAsync(() -> {
+                    String encodedImageData = productImageService.downloadAndEncodeImage(item.getDisplayImageData());
+                    item.setDisplayImageData(encodedImageData);
+                }, executor))
+                .toList();
+
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+
+        return cartListDtos;
     }
 
     /**
      * 장바구니에 상품 추가
      *
-     * @throws AjaxEntityNotFoundException
+     * 장바구니에 상품을 담거나 이미 담긴 상품일 경우 수량을 증가시킵니다.
+     *
+     * @param memberId  회원 ID
+     * @param productId 장바구니에 담을 상품 ID
+     * @param count     장바구니에 담을 수량
+     * @return 장바구니 결과 응답 DTO
+     * @throws EntityNotFoundAjaxException 존재하지 않는 회원 또는 상품일 경우
      */
-    public CartResultResponse addCart(int count, Long memberId, Long productId) {
-        Member member = memberRepository.findById(memberId).orElseThrow(() -> new AjaxEntityNotFoundException("존재하지 않는 회원입니다."));
-        Product product = productRepository.findById(productId).orElseThrow(() -> new AjaxEntityNotFoundException("존재하지 않는 상품입니다.."));
+    public CartResultResponse addCart(Long memberId, Long productId, int count) {
+        Member member = memberRepository.findById(memberId).orElseThrow(() -> new EntityNotFoundAjaxException("존재하지 않는 회원입니다."));
+        Product product = productRepository.findById(productId).orElseThrow(() -> new EntityNotFoundAjaxException("존재하지 않는 상품입니다.."));
+
+        if (count > product.getStockQuantity()) {
+            throw new NotEnoughStockAjaxException("재고가 부족합니다.");
+        }
+
         Cart cart = cartRepository.findByMemberAndProduct(member, product);
-        if(cart == null) {
+
+        if (cart == null) {
             cart = Cart.builder()
                     .count(count)
                     .member(member)
@@ -69,19 +91,23 @@ public class CartService {
     }
 
     /**
-     * 장바구니에 담긴 상품 수량 1개 증가
+     * 장바구니에서 상품 수량을 1개 증가
      *
-     * @throws AjaxEntityNotFoundException
+     * @param productId   증가할 상품 ID
+     * @param loginMember 현재 로그인한 회원
+     * @return 결과 응답 DTO
+     * @throws EntityNotFoundAjaxException 존재하지 않는 상품일 경우
      */
     public ResultResponse increaseCount(Long productId, Member loginMember) {
-        Product product = productRepository.findById(productId).orElseThrow(() -> new AjaxEntityNotFoundException("존재하지 않는 상품입니다."));
+        Product product = productRepository.findById(productId).orElseThrow(() -> new EntityNotFoundAjaxException("존재하지 않는 상품입니다."));
         Cart cart = cartRepository.findByMemberAndProduct(loginMember, product);
-        if(cart == null) {
+
+        if (cart == null) {
             return new ResultResponse(HttpStatus.BAD_REQUEST.value(), "장바구니에 존재하지 않는 상품입니다.\n다시 시도해 주세요.");
         }
 
-        if(cart.getCount() + 1 > product.getStockQuantity()) {
-            return new ResultResponse(HttpStatus.BAD_REQUEST.value(), "재고가 부족합니다.");
+        if (cart.getCount() + 1 > product.getStockQuantity()) {
+            throw new NotEnoughStockAjaxException("재고가 부족합니다.");
         }
 
         cart.updateCount(1);
@@ -89,14 +115,17 @@ public class CartService {
     }
 
     /**
-     * 장바구니에 담긴 상품 수량 1개 감소
+     * 장바구니에 담긴 상품 수량을 1개 감소
      *
-     * @throws AjaxEntityNotFoundException
+     * @param productId   감소할 상품 ID
+     * @param loginMember 현재 로그인한 회원
+     * @return 수량 감소 처리 결과 응답 DTO
+     * @throws EntityNotFoundAjaxException 존재하지 않는 상품일 경우
      */
     public ResultResponse decreaseCount(Long productId, Member loginMember) {
-        Product product = productRepository.findById(productId).orElseThrow(() -> new AjaxEntityNotFoundException("존재하지 않는 상품입니다."));
+        Product product = productRepository.findById(productId).orElseThrow(() -> new EntityNotFoundAjaxException("존재하지 않는 상품입니다."));
         Cart cart = cartRepository.findByMemberAndProduct(loginMember, product);
-        if(cart == null) {
+        if (cart == null) {
             return new ResultResponse(HttpStatus.BAD_REQUEST.value(), "장바구니에 존재하지 않는 상품입니다.\n다시 시도해 주세요.");
         }
 
@@ -105,37 +134,47 @@ public class CartService {
     }
 
     /**
-     * 장바구니에 담긴 상품 삭제
+     * 장바구니에서 상품 삭제
      *
-     * @throws AjaxEntityNotFoundException
+     * @param productIds  삭제할 상품 ID 리스트
+     * @param loginMember 현재 로그인한 회원
+     * @throws EntityNotFoundAjaxException 존재하지 않는 상품일 경우
      */
     public void deleteCarts(List<Long> productIds, Member loginMember) {
         productIds.stream().forEach(productId -> {
-            Product product = productRepository.findById(productId).orElseThrow(() -> new AjaxEntityNotFoundException("존재하지 않는 상품입니다."));
+            Product product = productRepository.findById(productId).orElseThrow(() -> new EntityNotFoundAjaxException("존재하지 않는 상품입니다."));
             cartRepository.deleteByMemberAndProduct(loginMember, product);
         });
     }
 
     /**
-     * 카트에 담긴 상품 개수
-     */
-    public int getCartItemCount(String loginId) {
-        Member member = memberRepository.findByLoginId(loginId).orElseThrow(() -> new EntityNotFoundException("존재하지 않는 회원입니다."));
-        return cartRepository.countByMember(member);
-    }
-
-    /**
-     *  재고 확인
+     * 장바구니에 담긴 상품의 재고를 확인
      *
-     *  @throws AjaxEntityNotFoundException
+     * @param productIds  확인할 상품 ID 리스트
+     * @param loginMember 현재 로그인한 회원
+     * @throws EntityNotFoundAjaxException 존재하지 않는 상품일 경우
+     * @throws NotEnoughStockAjaxException 재고가 부족할 경우
      */
     public void validateStockQuantity(List<Long> productIds, Member loginMember) {
         for (Long productId : productIds) {
-            Product product = productRepository.findById(productId).orElseThrow(() -> new AjaxEntityNotFoundException("존재하지 않는 상품입니다."));
+            Product product = productRepository.findById(productId).orElseThrow(() -> new EntityNotFoundAjaxException("존재하지 않는 상품입니다."));
             Cart cart = cartRepository.findByMemberAndProduct(loginMember, product);
-            if(product.getStockQuantity() == 0 || cart.getCount() > product.getStockQuantity()) {
+            if (product.getStockQuantity() == 0 || cart.getCount() > product.getStockQuantity()) {
                 throw new NotEnoughStockAjaxException("[" + product.getName() + "] 재고가 부족합니다.");
             }
         }
+    }
+
+    /**
+     * 장바구니에 담긴 상품 개수 조회
+     *
+     * @param loginId 회원의 로그인 ID
+     * @return 장바구니에 담긴 상품 개수
+     * @throws EntityNotFoundException 존재하지 않는 회원일 경우
+     */
+    @Transactional(readOnly = true)
+   public int getCartItemCount(String loginId) {
+        Member member = memberRepository.findByLoginId(loginId).orElseThrow(() -> new EntityNotFoundException("존재하지 않는 회원입니다."));
+        return cartRepository.countCartsByMember(member);
     }
 }
